# simplenote-rs

./: Cargo.toml  README.adoc
src/: api.rs  errors.rs  lib.rs  model.rs
tests/: tests.rs
