[package]
authors = ["Paul Woolcock <paul@woolcock.us>"]
name = "simplenote"
version = "0.1.0"
license ="MIT/Apache-2.0"
repository = "https://github.com/pwoolcoc/simplenote-rs.git"
homepage = "https://github.com/pwoolcoc/simplenote-rs.git"
documentation = "https://docs.rs/simplenote"
description = """
API bindings for the Simplenote service
"""

[dependencies]
base64 = "0.2.1"
error-chain = "0.7.1"
serde = "0.8.19"
serde_derive = "0.8.19"
serde_json = "0.8.4"
reqwest = "0.1.0"

# [dependencies.reqwest]
# git = "https://github.com/seanmonstar/reqwest"
